--- a/front/pagamento/pi.estacionamento-pagamento.css
+++ b/front/pagamento/pi.estacionamento-pagamento.css
@@ -56,7 +56,7 @@ body{
     background-clip: text;
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
-    font-size: 12.3px;
+    font-size: .72rem;
     font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     text-align: center;
 }
@@ -168,7 +168,7 @@ body{
     justify-content: center;
     align-items: center;
     transition-duration: 300ms;  
-    margin-top: 5%;  
+    margin-top: 15px;  
 }
 #clock p{
     display: flex;
